--- a/index.html
+++ b/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!--seo-->
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta httpEquiv="Content-Type" content="text/html; charset=utf-8" />
+<title>lottobot</title>
+<meta name="title" content="lottobot" />
+<meta name="description" content="number generator for all 6 major colorado lotto games" />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://lottobot.vercel.app" />
+<meta property="og:title" content="lottobot" />
+<meta property="og:description" content="number generator for all 6 major colorado lotto games" />
+<meta property="og:image" content="https://lottobot.vercel.app/assets/bot-CuAJQrtD.svg" />
+<meta property="twitter:card" content="summary_large_image" />
+<meta property="twitter:url" content="https://lottobot.vercel.app" />
+<meta property="twitter:title" content="lottobot" />
+<meta property="twitter:description" content="number generator for all 6 major colorado lotto games" />
+<meta property="twitter:image" content="https://lottobot.vercel.app/assets/bot-CuAJQrtD.svg" />
+<meta name="author" content="Jesse Roper" />
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>lottobot</title>
